# met-browser

./: .gitignore  README.md  classifications.py  pyproject.toml  sampling.py  sandbox.py  setup.py
.github/workflows/: build-macos.yml
data/: image_cache.json
src/: main.py
src/api/: classification_index.py  image_record_cache.py  met_api.py
src/dir_utils/: dirs.py
src/ui/: main_window.py  widgets.py  worker.py
utils/: classifications_builder.py
