[project]
name = "metbrowser"
version = "0.1.0"
description = "Met Museum Browser for macOS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pyside6>=6.10.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]
